# docs/swagger.yaml
@@ -31,27 +31,6 @@ definitions:
     - quantity
     type: object
   models.OrganisationNew:
-    properties:
-      address:
-        example: 123 Main St
-        type: string
-      description:
-        example: My Organization Description
-        type: string
-      logo:
-        example: https://www.example.com/logo.png
-        type: string
-      name:
-        example: My Organization
-        type: string
-      phone:
-        example: "1234567890"
-        type: string
-    required:
-    - address
-    - description
-    - name
-    - phone
     type: object
   models.Price:
     properties:
